
Besure to also join the discord: https://discord.gg/wv6huJAwEv

NOTE: Make sure you refresh the page! Sometimes you will not get the lastest update!

+ Means something was added
^ Means something was upgraded or changed
- Means something was removed
------------------------------------------------------------
Nov, 26
+ Added Resent Client
------------------------------------------------------------
Nov, 25
Sorry for the lack of updates, turkey day happened!
+ Added a note to learn to fly 2
^ Added more reviews
------------------------------------------------------------
Nov, 20
+ Added discord invite widget to the main readme file
+ Added workflow so that forks automatically update!
------------------------------------------------------------
Nov, 19
yippee
+ Added Grey Box Testing
+ Added Minecraft classic hacks
+ Added Papa's Burgeria
+ Added a calcuator
+ Added Learn to fly 2
+ Added Cluster Rush
------------------------------------------------------------
Nov, 18
+ Added ways on how to verify that I am real (the fact that this is needed is bonkers)
------------------------------------------------------------
Nov, 16
+ Added Crossy Road
+ Added Friday Night Funkin
+ Added Vex 7
+ Added Contact page
^ Fixed Bad Ice Cream 1, 2, and 3
^ Added more reviews
^ Fix mobile redirects for 1v1.lol
------------------------------------------------------------
Nov, 14
^ Added more reviews
------------------------------------------------------------
Nov, 13
+ Added Bad Ice Cream
+ Added Bad Ice Cream 2
+ Added Bad Ice Cream 3
+ Added Generic Fishing Game
+ Added Synesthesia
^ Updated changlog for a mistake
^ Updated Cookie Clicker to v2.048
------------------------------------------------------------
Nov, 12
Thank you so much to Alex for getting 1v1.lol to work!
+ Added 1v1.lol
+ Added Froggy's Battle
+ Added Evolution
+ Added Pop Cat classic
^ Update site statistics
^ Added more reviews
- Disable setting for new game notifications due to issues