@@ -1122,6 +1122,18 @@
                   </div>
                 </div>
               </div>
+
+              <div class="card-wrapper">
+                <div class="card text-center">
+                  <img class="card-img-top" src="/img/reviews/Frine.png" alt="Frine"/>
+                  <div class="card-body">
+                    <h3>Frine</h3>
+                    <p class="card-text">
+                      100000000000000000000/1, best site, so many websites for it, school is blocking some tho :(. but very great site! :)
+                    </p>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
